--- a/public/components/commLinks.hbs
+++ b/public/components/commLinks.hbs
@@ -13,4 +13,9 @@
     input[type=submit]{
         cursor: pointer;
     }
+    @media(max-width: 1000px){
+        body{
+          zoom: 40%;
+        }
+    }
 </style>
