--- a/public/components/commLinks.hbs
+++ b/public/components/commLinks.hbs
@@ -17,5 +17,9 @@
         body{
           zoom: 36.5%;
         }
+        .menuActive #menu{
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 </style>
