--- a/public/components/commLinks.hbs
+++ b/public/components/commLinks.hbs
@@ -17,9 +17,8 @@
         body{
           zoom: 36.5%;
         }
-        .menuActive #menu{
-            left: 50%;
-            transform: translateX(-50%);
+        *{
+            -webkit-tap-highlight-color: transparent;
         }
     }
 </style>
