--- a/public/contact.hbs
+++ b/public/contact.hbs
@@ -40,7 +40,7 @@ a{
     <div id="content">
         <center><font id="head">Contact</font></center>
         <div id="infos">
-            <font class="info"><i class="fas fa-envelope"></i>phutelecom@gmail.com</font><br>
+            <font class="info"><i class="fas fa-envelope"></i>phutelecom.official@gmail.com</font><br>
             <font class="info"><i class="fas fa-phone"></i>1800180478</font><br>
             <font class="info"><i class="fas fa-location-dot"></i>Kanpur, Uttar Pradesh</font>
             </div>
