--- a/public/components/commLinks.hbs
+++ b/public/components/commLinks.hbs
@@ -20,5 +20,13 @@
         *{
             -webkit-tap-highlight-color: transparent;
         }
+        #menuBack{
+            width: 100vw;
+        }
+        .menuActive #menu{
+            position: fixed;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 </style>
