--- a/public/components/commLinks.hbs
+++ b/public/components/commLinks.hbs
@@ -23,6 +23,9 @@
         #menuBack{
             width: 100vw;
         }
+        .menuActive #menuBack{
+            right: 0px;
+        }
         .menuActive #menu{
             position: fixed;
             left: 50%;
