--- a/public/message.hbs
+++ b/public/message.hbs
@@ -78,7 +78,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 $(document).ready(()=>{
-    const history = $('#history').html().split("<utbr>")
+    const history = $('#history').html().split('¿')
     history.forEach(createElm)
     function createElm(msg){
         const font = document.createElement('font')
