--- a/public/message.hbs
+++ b/public/message.hbs
@@ -69,10 +69,10 @@
     <center>    
     <div id="message">
     </div>
-    <div id="send">
+    <form id="send">
         <input type="text" id="text" class="send" placeholder="Message">
         <button id="sendButt" class="send"><i class="fas fa-paper-plane"></i></button>
-    </div>
+    </form>
     </center>
     <div id="history" hidden>{{history}}</div>
     <script src="/socket.io/socket.io.js"></script>
