--- a/public/message.hbs
+++ b/public/message.hbs
@@ -78,7 +78,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 $(document).ready(()=>{
-    $('#send').on('send',(e)=>{
+    $('#send').on('submit',(e)=>{
         e.preventDefault
     })
     const history = $('#history').html().split('¿')
