--- a/public/message.hbs
+++ b/public/message.hbs
@@ -69,7 +69,7 @@
     <center>    
     <div id="message">
     </div>
-    <form id="send">
+    <form id="send" onsubmit="return false">
         <input type="text" id="text" class="send" placeholder="Message">
         <button id="sendButt" class="send"><i class="fas fa-paper-plane"></i></button>
     </form>
