--- a/public/message.hbs
+++ b/public/message.hbs
@@ -105,7 +105,7 @@ $('#sendButt').click(()=>{
 socket.on('message',(param)=>{
     const font = document.createElement('font')
     font.innerHTML = param.msg+' ~ '+param.name
-    var audio = new Audio('message.mp3')
+    var audio = new Audio('https://drive.google.com/uc?export=download&id=1_gWF0FnQiNLK3u4E4idfSfpZNXCcFIAE')
     audio.play()
     document.querySelector('#message').appendChild(font)
     document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
