--- a/public/message.hbs
+++ b/public/message.hbs
@@ -112,8 +112,8 @@ socket.on('message',(param)=>{
     document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
 })
 $('#record').click(()=>{
-    $('#record').toggleClass('fa-microphone')
-    $('#record').toggleClass('fa-stop')
+    $('#record i').toggleClass('fa-microphone')
+    $('#record i').toggleClass('fa-stop')
 })
     </script>
 </body>
