--- a/public/message.hbs
+++ b/public/message.hbs
@@ -24,7 +24,7 @@
     border-radius: 15px;
 }
 #text{
-    width: calc(70% - 30px);
+    width: calc(80% - 30px);
     margin-left: 20px;
     padding: 0 10px 0 10px;
 }
@@ -61,6 +61,11 @@ button:hover{
 }
 *::-webkit-scrollbar{
     display: none;
+}
+@media(max-width: 800px){
+    #text{
+        width: calc(60% - 30px);
+    }
 }
     </style>
 </head>
