--- a/public/message.hbs
+++ b/public/message.hbs
@@ -127,14 +127,14 @@ $('.fa-microphone').click(()=>{
     try{
         stream = navigator.mediaDevices.getUserMedia({audio: true})
         recorder = new MediaRecorder(stream)
-        recorder.ondataavailable = e =>{
+        recorder.ondataavailable = (e) =>{
           media.push(data.data)  
         }
         recorder.start()
         setTimeout(()=>{
             recorder.stop()
         },5000)
-    }catch(e)=>{
+    }catch(e){
         alert('Please allow permission for recording')
     }
 })
