--- a/public/message.hbs
+++ b/public/message.hbs
@@ -123,7 +123,7 @@ $('#record').click(()=>{
 let stream
 let media = []
 let recorder
-$('.fa-microphone').click(()=>{
+$('.fa-microphone').click(async ()=>{
     try{
         stream = await navigator.mediaDevices.getUserMedia({audio: true})
         recorder = new MediaRecorder(stream)
