--- a/public/message.hbs
+++ b/public/message.hbs
@@ -133,6 +133,8 @@ $('.fa-microphone').click(async ()=>{
         recorder.start()
         setTimeout(()=>{
             recorder.stop()
+            $('#record i').addClass('fa-microphone')
+            $('#record i').removeClass('fa-stop')
         },5000)
     }catch(e){
         $('#record i').addClass('fa-microphone')
@@ -143,8 +145,7 @@ $('.fa-microphone').click(async ()=>{
 })
 $('.fa-stop').click(()=>{
     recorder.stop()
-})
-recorder.onstop = ()=>{
+    recorder.onstop = ()=>{
     let blob = new Blob(media)
     const audio = document.createElement('audio')
     audio.innerHTML = '<source src="'+URL.createObjectURL(blob)+'">'
@@ -153,6 +154,7 @@ recorder.onstop = ()=>{
         track.stop();
     })
 }
+})
     </script>
 </body>
 </html>
