--- a/public/message.hbs
+++ b/public/message.hbs
@@ -128,7 +128,7 @@ $('.fa-microphone').click(async ()=>{
         stream = await navigator.mediaDevices.getUserMedia({audio: true})
         recorder = new MediaRecorder(stream)
         recorder.ondataavailable = (e) =>{
-          media.push(data.data)  
+          media.push(e.data)  
         }
         recorder.start()
         setTimeout(()=>{
