--- a/public/message.hbs
+++ b/public/message.hbs
@@ -91,9 +91,10 @@ $(document).ready(()=>{
     history.forEach(createElm)
     function createElm(msg){
         if(msg.include('suzModBuf')){
+            const name = msg.replace('suzModBuf').trim('~')[0]
             const audio = document.createElement('audio')
             audio.setAttribute('controls',true)
-            audio.innerHTML = '<source src="'+url+'">'
+            audio.innerHTML = '<source src="../storage/'+name+'">'
             const font = document.createElement('font')
             font.innerHTML = ' ~ '+param.name
             const div = document.createElement('div')
@@ -174,10 +175,9 @@ $('.fa-microphone').click(async ()=>{
 socket.on('audio',(param)=>{
     var bgm = new Audio('message.mp3')
     bgm.play()
-    const url = URL.createObjectURL(param.audio)
     const audio = document.createElement('audio')
     audio.setAttribute('controls',true)
-    audio.innerHTML = '<source src="'+url+'">'
+    audio.innerHTML = '<source src="'++'">'
     const font = document.createElement('font')
     font.innerHTML = ' ~ '+param.name
     const div = document.createElement('div')
