--- a/public/message.hbs
+++ b/public/message.hbs
@@ -92,14 +92,8 @@ $(document).ready(()=>{
     function createElm(msg){
         if(msg.includes('suzModBuf')){
             const name = msg.replace('suzModBuf').trim('~')[0]
-            const audio = document.createElement('audio')
-            audio.setAttribute('controls',true)
-            audio.innerHTML = '<source src="../storage/'+name+'">'
-            const font = document.createElement('font')
-            font.innerHTML = ' ~ '+param.name
             const div = document.createElement('div')
-            div.appendChild(audio)
-            div.appendChild(font)
+            div.innerHTML = '<audio><source src="../storage/'+name+'"></audio><font>~ '+msg.replace('suzModBuf').trim('~')[1]+'</font>'
             document.querySelector('#message').appendChild(div)
             document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
         }
@@ -176,14 +170,8 @@ socket.on('audio',(param)=>{
     var bgm = new Audio('message.mp3')
     bgm.play()
     const url = URL.createObjectURL(param.audio)
-    const audio = document.createElement('audio')
-    audio.setAttribute('controls',true)
-    audio.innerHTML = '<source src="'+url+'">'
-    const font = document.createElement('font')
-    font.innerHTML = ' ~ '+param.name
     const div = document.createElement('div')
-    div.appendChild(audio)
-    div.appendChild(font)
+    div.innerHTML = '<audio><source src="'+url+'"></audio><font>~ '+param.name+'</font>'
     document.querySelector('#message').appendChild(div)
     document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
 })
