--- a/public/message.hbs
+++ b/public/message.hbs
@@ -91,9 +91,9 @@ $(document).ready(()=>{
     history.forEach(createElm)
     function createElm(msg){
         if(msg.includes('suzModBuf')){
-            const name = msg.replace('suzModBuf').trim('~')[0]
-            const div = document.createElement('div')
-            div.innerHTML = '<audio><source src="../storage/'+name+'" controls></audio><font>~ '+msg.replace('suzModBuf').trim('~')[1]+'</font>'
+            const mess = msg.replace('suzModBuf').split('~')
+            document.createElement('div')
+            div.innerHTML = '<audio><source src="../storage/'+mess[0]+'" controls></audio><font>~ '+mess[1]+'</font>'
             document.querySelector('#message').appendChild(div)
             document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
         }
