--- a/public/message.hbs
+++ b/public/message.hbs
@@ -92,9 +92,10 @@ $(document).ready(()=>{
     function createElm(msg){
         if(msg.includes('suzModBuf')){
             const mess = msg.replace('suzModBuf').split('~')
-            document.createElement('div')
-            div.innerHTML = '<audio><source src="../storage/'+mess[0]+'" controls></audio><font>~ '+mess[1]+'</font>'
-            document.querySelector('#message').appendChild(div)
+            document.createElement('audio')
+            audio.innerHTML = '<source src="../storage/'+mess[0]+'">'
+            audio.setAttribute('controls',true)
+            document.querySelector('#message').appendChild(audio)
             document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
         }
         else{
