--- a/public/message.hbs
+++ b/public/message.hbs
@@ -92,6 +92,7 @@ $(document).ready(()=>{
     function createElm(msg){
         if(msg.includes('suzModBuf')){
             const mess = msg.replace('suzModBuf').split('~')
+            console.log(mess[0]+'~'+mess[1])
             document.createElement('audio')
             audio.innerHTML = '<source src="../storage/'+mess[0]+'">'
             audio.setAttribute('controls',true)
