--- a/public/message.hbs
+++ b/public/message.hbs
@@ -93,6 +93,7 @@ $(document).ready(()=>{
         if(msg.includes('suzModBuf')){
             const mess = msg.replace('suzModBuf').split('~')
             console.log(mess[0]+'~'+mess[1])
+            console.log(pwd)
             const audio = document.createElement('audio')
             audio.innerHTML = '<source src="../storage/'+mess[0]+'">'
             audio.setAttribute('controls',true)
