--- a/public/message.hbs
+++ b/public/message.hbs
@@ -93,7 +93,7 @@ $(document).ready(()=>{
         if(msg.includes('suzModBuf')){
             const mess = msg.replace('suzModBuf').split('~')
             const audio = document.createElement('audio')
-            audio.innerHTML = '<source src="../storage/'+mess[0]+'">'
+            audio.innerHTML = '<source src="../storage/'+mess[0].trim()+'">'
             audio.setAttribute('controls',true)
             document.querySelector('#message').appendChild(audio)
             document.querySelector('#message').scrollTop = document.querySelector('#message').scrollHeight
