--- a/public/message.hbs
+++ b/public/message.hbs
@@ -73,6 +73,7 @@ button:hover{
     {{>userNav}}
     <center>    
     <div id="message">
+        <audio controls><source src="message.mp3"></audio>
     </div>
     <form id="send" onsubmit="return false">
         <input type="text" id="text" class="send" placeholder="Message">
