--- a/public/message.hbs
+++ b/public/message.hbs
@@ -73,7 +73,7 @@ button:hover{
     {{>userNav}}
     <center>    
     <div id="message">
-        <audio controls><source src="../public/message.mp3"></audio>
+        <audio controls><source src="/opt/render/project/src/public/message.mp3"></audio>
     </div>
     <form id="send" onsubmit="return false">
         <input type="text" id="text" class="send" placeholder="Message">
